# zunitoken

./: .gitignore  Cargo.toml  README.md
zunitoken_circuit/: Cargo.toml
zunitoken_circuit/src/circuit/: mod.rs
zunitoken_circuit/src/test/: pedersen_test.rs
zunitoken_demo/: deploy.js  package-lock.json  package.json  test.js
zunitoken_demo/ride/: zwaves.ride
zunitoken_jni/: Cargo.toml  README.md  build_all.sh
zunitoken_jni/javalib/: .gitignore  settings.gradle
zunitoken_jni/javalib/src/main/java/com/decentralchain/zwaves/bls12/: Groth16.java  JNILibrary.java
zunitoken_jni/javalib/src/test/java/com/decentralchain/zwaves/bls12/: Groth16Test.java
zunitoken_jni/src/: lib.rs
zunitoken_jni/src/tests/: mod.rs
zunitoken_node/: README.md  package-lock.json  package.json
zunitoken_node/native/: Cargo.toml
zunitoken_node/native/src/: helpers.rs  lib.rs
zunitoken_node/test/: test_transfer.js  test_utxo_accumulator.js
zunitoken_primitives/: Cargo.toml
zunitoken_setup/: Cargo.toml
