[workspace]
members = [
  "zunitoken_primitives",
  "zunitoken_circuit",
  "zunitoken_jni",
  "sapling-crypto",
  "zunitoken_setup",
  "zunitoken_node/native"
]
crate-type = ["cdylib", "rlib"]
[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[profile.dev]
lto = true
panic = 'abort'
codegen-units = 8
