[package]
name = "zunitoken _node"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "zunitoken _node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"

rand = "0.4"
bellman = { version = "0.1.0"}
sapling-crypto = { path = "../../sapling-crypto" }
zunitoken _primitives = {path = "../../zunitoken _primitives"}
zunitoken _circuit = {path = "../../zunitoken _circuit"}

pairing = "0.14"
phase2 = "0.2.2"
lazy_static = "1.4.0"
arrayvec = "0.5.1"